Alteração de dependencia e input files - incompleto

--- a/conf/node.yaml
+++ b/conf/node.yaml
@@ -82,6 +82,7 @@ supported-formats:
     - .fits
     - .tbl
     - .hdr
+    - .png
     
 # Supported services of BioNimbuZ    
 supported-services:
